fix: nav overflow

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -165,6 +165,9 @@ section
     @media screen and ( max-width: 670px)
       &.category
         display: none
+    @media screen and ( max-width: 500px)
+      padding-left: 0
+      padding-right: var(--spacing-one) !important
     &.icons
       display: flex
       justify-content: flex-end
@@ -222,8 +225,17 @@ section
     & .logo
       flex-grow: 1
       @media screen and ( max-width: $breakpoint-mobile)
-        span.title
+        overflow: hidden
+        min-width: 0
+        text-overflow: ellipsis
+        flex-shrink: 1
+        white-space: nowrap
+        padding-right: 0 !important
+      @media screen and ( max-width: 500px)
+        .logo-Subtitle
           display: none
+    & .icons
+      padding-left: 0 !important
   &-Filter
     li
       // text-transform: uppercase
